k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msb-api
  namespace: msb
spec:
  type: ClusterIP
  selector:
    app: msb-api
  ports:
    - name: http
      port: 8000
      targetPort: http
